fix header padding and alignment

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -28,7 +28,7 @@
  */
 .slider-menu__toggler {
   position: relative;
-  z-index: 999;
+  z-index: 100;
   height: 100%;
   width: 100%;
   cursor: pointer;
@@ -45,7 +45,7 @@
   height: 2.5px;
   background: $color-secondary;
   border-radius: 20px;
-  transition: 0.1s;
+  // transition: 0.1s;
 }
 .slider-menu__toggler span::before {
   top: -8px;
@@ -55,13 +55,13 @@
 }
 // Add the animation when clicked to hamburger
 .slider-menu__toggler.active > span {
-  background: transparent;
+  // background: transparent;
 }
 .slider-menu__toggler.active > span::before,
 .slider-menu__toggler.active > span::after {
   // background: lighten($color-secondary, 15%);
   // top: 0px;
-  background: transparent;
+  // background: transparent;
 }
 // .slider-menu__toggler.active > span::before {
 //   transform: rotate(-225deg);
@@ -118,14 +118,14 @@
     height: 100%;
     /* overflow: scroll; */
   }
-  .slider-menu__close {
-    position: absolute;
-    top: .5rem;
-    left: .5rem;
-    width: 10px;
-    height: 3px;
-    background: blue;
-  }
+  // .slider-menu__close {
+  //   position: absolute;
+  //   top: .5rem;
+  //   left: .5rem;
+  //   width: 10px;
+  //   height: 3px;
+  //   background: blue;
+  // }
   // .slider-menu::before,
   // .slider-menu::after {
   //   content: '';
