--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -33,7 +33,7 @@ header {
 }
 
 .row--nav-pad {
-  padding: 1.5rem;
+  padding: 1.5rem 0;
 }
 
 .site-tagline {
