--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -202,6 +202,10 @@
     justify-content: space-around;
 }
 
+.align-items-center {
+    align-items: center;
+}
+
 .center-align {
     display: flex;
     justify-content: center;
